fixed mqtt issues - set retain to true

--- a/components/climates.yaml
+++ b/components/climates.yaml
@@ -1,7 +1,7 @@
 - platform: mqtt
   name: "Thermostat Heat"
   unique_id: "thermostat_heat"
-  retain: false
+  retain: true
   current_temperature_topic: "smartthings/Thermostat/temperature"
   mode_command_topic: "smartthings/Thermostat/thermostatMode"
   mode_state_topic: "smartthings/Thermostat/thermostatMode"
@@ -23,7 +23,7 @@
 - platform: mqtt
   name: "Thermostat Cool"
   unique_id: "thermostat_cool"
-  retain: false
+  retain: true
   current_temperature_topic: "smartthings/Thermostat/temperature"
   mode_command_topic: "smartthings/Thermostat/thermostatMode"
   mode_state_topic: "smartthings/Thermostat/thermostatMode"
