--- a/components/locks.yaml
+++ b/components/locks.yaml
@@ -5,4 +5,4 @@
   state_topic: "smartthings/Front Door Lock/lock"
   payload_lock: locked
   payload_unlock: unlocked
-  retain: false 
+  retain: true 
