--- a/automations.yaml
+++ b/automations.yaml
@@ -18,7 +18,7 @@ alias: IFTTT Vacuum Control
 initial_state: True
 trigger:
   platform: webhook
-  webhook_id: !secret ifttt_webhook_id
+  webhook_id: !secret webhook_id_ifttt
 action:
   service: rest_command.ir_send
   data_template: 
