--- a/configuration.yaml
+++ b/configuration.yaml
@@ -37,10 +37,20 @@ weather:
     update_interval:
       minutes: 15
 
-usps:
-  username: !secret user_usps
-  password: !secret pass_usps
-  driver: chrome
+custom_updater:
+  mode: storage
+  track:
+    - cards
+    - components
+    - python_scripts
+  show_installable: true
+  component_urls:
+    - https://raw.githubusercontent.com/pnbruckner/homeassistant-config/master/custom_components.json
+  python_script_urls:
+    - https://raw.githubusercontent.com/pnbruckner/homeassistant-config/master/python_scripts.json
+
+lovelace:
+#  mode: yaml
 
 sensor: !include components/sensors.yaml
 media_player: !include components/media_players.yaml
