--- a/googlehome.yaml
+++ b/googlehome.yaml
@@ -1,3 +1,3 @@
 devices:
-  - host: !secret host_kitchen_googlehome
-  - host: !secret host_bathroom_googlehome
+- host: '!secret host_kitchen_googlehome'
+- host: '!secret host_bathroom_googlehome'
