--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,180 +1,144 @@
 - platform: darksky
-  api_key: !secret api_darksky
+  api_key: '!secret api_darksky'
   forecast:
-    - 0
-    - 1
-    - 2
-    - 3
-    - 4
-    - 5
-    - 6
-    - 7
+  - 0
+  - 1
+  - 2
+  - 3
+  - 4
+  - 5
+  - 6
+  - 7
   update_interval:
     minutes: 15
   monitored_conditions:
-    - icon
-    - precip_type
-    - precip_intensity
-    - precip_probability
-    - precip_accumulation
-    - temperature
-    - apparent_temperature
-    - wind_speed
-    - wind_gust
-    - wind_bearing
-    - cloud_cover
-    - humidity
-    - visibility
-    - temperature_high
-    - temperature_low
-    - apparent_temperature_high
-    - apparent_temperature_low
-    - precip_intensity_max
-
+  - icon
+  - precip_type
+  - precip_intensity
+  - precip_probability
+  - precip_accumulation
+  - temperature
+  - apparent_temperature
+  - wind_speed
+  - wind_gust
+  - wind_bearing
+  - cloud_cover
+  - humidity
+  - visibility
+  - temperature_high
+  - temperature_low
+  - apparent_temperature_high
+  - apparent_temperature_low
+  - precip_intensity_max
 - platform: plex
-  name: "Plex Media Server"
+  name: Plex Media Server
   server: home
-  token: !secret token_plex
-  username: !secret user_plex
-  password: !secret pass_plex
-
+  token: '!secret token_plex'
+  username: '!secret user_plex'
+  password: '!secret pass_plex'
 - platform: kodi_recently_added
-  host: !secret host_nas
-
+  host: '!secret host_nas'
 - platform: radarr_upcoming_media
-  host: !secret host_nas
-  api_key: !secret api_radarr
-
+  host: '!secret host_nas'
+  api_key: '!secret api_radarr'
 - platform: sonarr_upcoming_media
-  host: !secret host_nas
-  api_key: !secret api_sonarr
-
-# - platform: synologydsm
-#   name: "Diskstation"
-#   port: !secret port_ds
-#   host: !secret host_ds
-#   username: !secret user_ds
-#   password: !secret pass_ds
-#   monitored_conditions:
-#     - cpu_total_load
-#     - memory_real_usage
-#     - disk_smart_status
-#     - disk_exceed_bad_sector_thr
-#     - disk_below_remain_life_thr
-#     - disk_status
-#     - volume_status
-#     - volume_size_total
-#     - volume_size_used
-
+  host: '!secret host_nas'
+  api_key: '!secret api_sonarr'
 - platform: waze_travel_time
-  name: "Raman Work Commute"
-  origin: !secret address_home
-  destination: !secret address_work_raman
-  region: "US"
+  name: Raman Work Commute
+  origin: '!secret address_home'
+  destination: '!secret address_work_raman'
+  region: US
   realtime: true
-
 - platform: waze_travel_time
-  name: "Raman Home Commute"
-  origin: !secret address_work_raman
-  destination: !secret address_home
-  region: "US"
+  name: Raman Home Commute
+  origin: '!secret address_work_raman'
+  destination: '!secret address_home'
+  region: US
   realtime: true
-
 - platform: waze_travel_time
-  name: "Sherene Work Commute"
-  origin: !secret address_home
-  destination: !secret address_work_sherene
-  region: "US"
+  name: Sherene Work Commute
+  origin: '!secret address_home'
+  destination: '!secret address_work_sherene'
+  region: US
   realtime: true
-
 - platform: waze_travel_time
-  name: "Sherene Home Commute"
-  origin: !secret address_work_sherene
-  destination: !secret address_home
-  region: "US"
+  name: Sherene Home Commute
+  origin: '!secret address_work_sherene'
+  destination: '!secret address_home'
+  region: US
   realtime: true
-
 - platform: pi_hole
-  name: "Pi-Hole"
-  host: !secret host_pihole
-  port: !secret port_pihole
+  name: Pi-Hole
+  host: '!secret host_pihole'
+  port: '!secret port_pihole'
   monitored_conditions:
-    - ads_blocked_today
-    - ads_percentage_today
-    - dns_queries_today
-    - domains_being_blocked
-    - queries_cached
-    - queries_forwarded
-    - unique_clients
-    - unique_domains
-    - clients_ever_seen
-
+  - ads_blocked_today
+  - ads_percentage_today
+  - dns_queries_today
+  - domains_being_blocked
+  - queries_cached
+  - queries_forwarded
+  - unique_clients
+  - unique_domains
+  - clients_ever_seen
 - platform: mqtt
-  name: "Front Door Lock Battery"
+  name: Front Door Lock Battery
   unique_id: front_door_lock_battery
-  unit_of_measurement: "%"
-  device_class: "battery"
-  state_topic: "smartthings/Front Door Lock/battery"
-
+  unit_of_measurement: '%'
+  device_class: battery
+  state_topic: smartthings/Front Door Lock/battery
 - platform: mqtt
-  name: "Living Room Sensor Battery"
+  name: Living Room Sensor Battery
   unique_id: living_room_sensor_battery
-  unit_of_measurement: "%"
-  device_class: "battery"
-  state_topic: "smartthings/Living Room Sensor/battery"
-
+  unit_of_measurement: '%'
+  device_class: battery
+  state_topic: smartthings/Living Room Sensor/battery
 - platform: mqtt
-  name: "Master Bedroom Sensor Battery"
+  name: Master Bedroom Sensor Battery
   unique_id: master_bedroom_sensor_battery
-  unit_of_measurement: "%"
-  device_class: "battery"
-  state_topic: "smartthings/Master Bedroom Sensor/battery"
-
+  unit_of_measurement: '%'
+  device_class: battery
+  state_topic: smartthings/Master Bedroom Sensor/battery
 - platform: mqtt
-  name: "Thermostat Humidity"
+  name: Thermostat Humidity
   unique_id: thermostat_humidity
-  unit_of_measurement: "%"
-  device_class: "humidity"
-  state_topic: "smartthings/Thermostat/humidity"
-
+  unit_of_measurement: '%'
+  device_class: humidity
+  state_topic: smartthings/Thermostat/humidity
 - platform: mqtt
-  name: "Living Room Humidity"
+  name: Living Room Humidity
   unique_id: living_room_sensor_humidity
-  unit_of_measurement: "%"
-  device_class: "humidity"
-  state_topic: "smartthings/Living Room Sensor/humidity"
-
+  unit_of_measurement: '%'
+  device_class: humidity
+  state_topic: smartthings/Living Room Sensor/humidity
 - platform: mqtt
-  name: "Master Bedroom Humidity"
+  name: Master Bedroom Humidity
   unique_id: master_bedroom_sensor_humidity
-  unit_of_measurement: "%"
-  device_class: "humidity"
-  state_topic: "smartthings/Master Bedroom Sensor/humidity"
-
+  unit_of_measurement: '%'
+  device_class: humidity
+  state_topic: smartthings/Master Bedroom Sensor/humidity
 - platform: mqtt
-  name: "Living Room Temperature"
+  name: Living Room Temperature
   unique_id: living_room_sensor_temperature
-  unit_of_measurement: "°F"
-  device_class: "temperature"
-  state_topic: "smartthings/Living Room Sensor/temperature"
-
+  unit_of_measurement: "\xB0F"
+  device_class: temperature
+  state_topic: smartthings/Living Room Sensor/temperature
 - platform: mqtt
-  name: "Master Bedroom Temperature"
+  name: Master Bedroom Temperature
   unique_id: master_bedroom_sensor_temperature
-  unit_of_measurement: "°F"
-  device_class: "temperature"
-  state_topic: "smartthings/Master Bedroom Sensor/temperature"
-
+  unit_of_measurement: "\xB0F"
+  device_class: temperature
+  state_topic: smartthings/Master Bedroom Sensor/temperature
 - platform: mqtt
-  name: "Living Room Illuminance"
+  name: Living Room Illuminance
   unique_id: living_room_sensor_illuminance
-  unit_of_measurement: "lm"
-  device_class: "illuminance"
-  state_topic: "smartthings/Living Room Sensor/illuminance"
-
+  unit_of_measurement: lm
+  device_class: illuminance
+  state_topic: smartthings/Living Room Sensor/illuminance
 - platform: mqtt
-  name: "Master Bedroom Illuminance"
+  name: Master Bedroom Illuminance
   unique_id: master_bedroom_sensor_illuminance
-  unit_of_measurement: "lm"
-  device_class: "illuminance"
-  state_topic: "smartthings/Master Bedroom Sensor/illuminance"
+  unit_of_measurement: lm
+  device_class: illuminance
+  state_topic: smartthings/Master Bedroom Sensor/illuminance
