--- a/configuration.yaml
+++ b/configuration.yaml
@@ -3,50 +3,68 @@ config:
 history:
 logbook:
 map:
+
 homeassistant:
   name: Home
-  latitude: '!secret lat_home'
-  longitude: '!secret long_home'
-  elevation: '!secret elevation_home'
+  latitude: !secret lat_home
+  longitude: !secret long_home
+  elevation: !secret elevation_home
   unit_system: imperial
   time_zone: America/New_York
-  customize: '!include customize.yaml'
+  customize: !include customize.yaml
+
 http:
-  api_password: '!secret pass_api'
+  api_password: !secret pass_api
   ssl_certificate: /cert/fullchain.pem
   ssl_key: /cert/privkey.pem
-  base_url: '!secret url_base'
+  base_url: !secret url_base
+
 updater:
   reporting: false
+
 discovery:
   ignore:
-  - plex_mediaserver
-  - roku
+    - plex_mediaserver
+    - roku
+
 conversation:
 sun:
 lovelace:
-weather: '!include weather.yaml'
-sensor: '!include sensor.yaml'
-media_player: '!include media_player.yaml'
-roku: '!include roku.yaml'
-lock: '!include lock.yaml'
-light: '!include light.yaml'
-climate: '!include climate.yaml'
-device_tracker: '!include device_tracker.yaml'
-rest_command: '!include rest_command.yaml'
-binary_sensor: '!include binary_sensor.yaml'
-notify: '!include notify.yaml'
-custom_updater: '!include custom_updater.yaml'
-asuswrt: '!include asuswrt.yaml'
+
+weather: !include weather.yaml
+sensor: !include sensor.yaml
+media_player: !include media_player.yaml
+roku: !include roku.yaml
+lock: !include lock.yaml
+light: !include light.yaml
+climate: !include climate.yaml
+device_tracker: !include device_tracker.yaml
+rest_command: !include rest_command.yaml
+binary_sensor: !include binary_sensor.yaml
+notify: !include notify.yaml
+custom_updater: !include custom_updater.yaml
+#googlehome: !include googlehome.yaml
+asuswrt: !include asuswrt.yaml
+
+# Text to speech
 tts:
-- platform: google
+  - platform: google
+
+# MQTT
 mqtt:
-  broker: '!secret host_mqtt'
-  port: '!secret port_mqtt'
+  broker: !secret host_mqtt
+  port: !secret port_mqtt
+
+# Zwave
+#zwave:
+#  usb_path: /dev/zwave
+#  network_key: !secret zwave_network_key
+
 influxdb:
-  username: '!secret user_influx'
-  password: '!secret pass_influx'
-group: '!include groups.yaml'
-automation: '!include automations.yaml'
-script: '!include scripts.yaml'
-zone: '!include zones.yaml'
+  username: !secret user_influx
+  password: !secret pass_influx
+
+group: !include groups.yaml
+automation: !include automations.yaml
+script: !include scripts.yaml
+zone: !include zones.yaml
