--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -2,5 +2,5 @@
   interval_seconds: 30
   consider_home: 600
   new_device_defaults:
-    track_new_devices: false
-    hide_if_away: false
+    track_new_devices: False
+    hide_if_away: False
