--- a/notify.yaml
+++ b/notify.yaml
@@ -1,6 +1,7 @@
 - platform: nfandroidtv
-  name: Living Room
-  host: '!secret host_living_room_shield'
+  name: "Living Room"
+  host: !secret host_living_room_shield
+
 - platform: nfandroidtv
-  name: Bedroom
-  host: '!secret host_bedroom_firetv'
+  name: "Bedroom"
+  host: !secret host_bedroom_firetv
