--- a/sensor.yaml
+++ b/sensor.yaml
@@ -97,7 +97,7 @@
 - platform: pi_hole
   name: "Pi-Hole"
   host: !secret host_pihole
-  port: !secret port_pihole
+  # port: !secret port_pihole
   monitored_conditions:
     - ads_blocked_today
     - ads_percentage_today
