--- a/automations.yaml
+++ b/automations.yaml
@@ -1,27 +1,22 @@
-# id: ifttt_vacuum_control
-# alias: IFTTT Vacuum Control
-# initial_state: True
-# trigger:
-#   platform: event
-#   event_type: ifttt_webhook_received
-#   event_data:
-#     action: ir_send
-# action:
-#   service: rest_command.ir_send
-#   data_template: 
-#     blaster: '{{ trigger.event.data.blaster }}'
-#     target: '{{ trigger.event.data.target }}'
-#     command: '{{ trigger.event.data.command }}'
+- id: ifttt_vacuum_control
+  alias: IFTTT Vacuum Control
+  initial_state: True
+  trigger:
+    platform: webhook
+    webhook_id: !secret webhook_vacuum
+  action:
+    service: rest_command.ir_send
+    data_template: 
+      blaster: '{{ trigger.json.blaster }}'
+      target: '{{ trigger.json.target }}'
+      command: '{{ trigger.json.command }}'
 
-id: ifttt_vacuum_control
-alias: IFTTT Vacuum Control
-initial_state: True
-trigger:
-  platform: webhook
-  webhook_id: !secret webhook_vacuum
-action:
-  service: rest_command.ir_send
-  data_template: 
-    blaster: '{{ trigger.json.blaster }}'
-    target: '{{ trigger.json.target }}'
-    command: '{{ trigger.json.command }}'
+- id: notify_updates
+  alias: 'Update Available Notifications'
+  trigger:
+    platform: state
+    entity_id: updater.updater
+  action:
+    service: notify.slack
+    data:
+      message: 'Update for Home Assistant is available.'
