--- a/media_player.yaml
+++ b/media_player.yaml
@@ -1,11 +1,9 @@
 - platform: kodi
-  name: "Living Room Kodi"
-  host: !secret host_living_room_shield
-
+  name: Living Room Kodi
+  host: !secret 'host_living_room_shield'
 - platform: kodi
-  name: "Bedroom Kodi"
-  host: !secret host_bedroom_firetv
-
+  name: Bedroom Kodi
+  host: !secret 'host_bedroom_firetv'
 - platform: firetv
-  name: "Bedroom FireTV"
-  host: !secret host_bedroom_firetv
+  name: Bedroom FireTV
+  host: !secret 'host_bedroom_firetv'
