--- a/notify.yaml
+++ b/notify.yaml
@@ -1,13 +1,11 @@
 - platform: nfandroidtv
-  name: "Living Room"
-  host: !secret host_living_room_shield
-
+  name: Living Room
+  host: !secret 'host_living_room_shield'
 - platform: nfandroidtv
-  name: "Bedroom"
-  host: !secret host_bedroom_firetv
-
+  name: Bedroom
+  host: !secret 'host_bedroom_firetv'
 - platform: slack
-  name: "Slack"
-  api_key: !secret api_slack
-  default_channel: !secret default_channel_slack
-  icon: ":information_source:"
+  name: Slack
+  api_key: !secret 'api_slack'
+  default_channel: !secret 'default_channel_slack'
+  icon: ':information_source:'
