--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@
 
 # You can whitelist files/folders with !, these will not be ignored.
 !*.yaml
-!*.hjson
 !.gitignore
 !*.md
 !hjson
-!hjson/convertConfigs.py
+!hjson/*.hjson
+!hjson/*.py
+!hjson/*.sh
 
 # Ignore folders.
 .storage
