--- a/media_player.yaml
+++ b/media_player.yaml
@@ -7,3 +7,6 @@
 - platform: firetv
   name: Bedroom FireTV
   host: !secret 'host_bedroom_firetv'
+- platform: plex
+  entity_namespace: plex
+  include_non_clients: true
