--- a/climate.yaml
+++ b/climate.yaml
@@ -1,38 +1,38 @@
-- platform: mqtt
-  name: Thermostat Heat
-  unique_id: thermostat_heat
-  current_temperature_topic: smartthings/Thermostat/temperature
-  mode_command_topic: smartthings/Thermostat/thermostatMode
-  mode_state_topic: smartthings/Thermostat/thermostatMode
-  modes:
+- modes:
   - 'off'
   - heat
   - cool
   - auto
-  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
-  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
-  fan_modes:
-  - auto
-  - 'on'
   temperature_command_topic: smartthings/Thermostat/heatingSetpoint
+  platform: mqtt
+  current_temperature_topic: smartthings/Thermostat/temperature
+  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
   temperature_state_topic: smartthings/Thermostat/heatingSetpoint
   temp_step: 0.5
-- platform: mqtt
-  name: Thermostat Cool
-  unique_id: thermostat_cool
-  current_temperature_topic: smartthings/Thermostat/temperature
   mode_command_topic: smartthings/Thermostat/thermostatMode
+  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
   mode_state_topic: smartthings/Thermostat/thermostatMode
-  modes:
+  unique_id: thermostat_heat
+  name: Thermostat Heat
+  fan_modes:
+  - auto
+  - 'on'
+- modes:
   - 'off'
   - heat
   - cool
   - auto
-  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
+  temperature_command_topic: smartthings/Thermostat/coolingSetpoint
+  platform: mqtt
+  current_temperature_topic: smartthings/Thermostat/temperature
   fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+  temperature_state_topic: smartthings/Thermostat/coolingSetpoint
+  temp_step: 0.5
+  mode_command_topic: smartthings/Thermostat/thermostatMode
+  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
+  mode_state_topic: smartthings/Thermostat/thermostatMode
+  unique_id: thermostat_cool
+  name: Thermostat Cool
   fan_modes:
   - auto
   - 'on'
-  temperature_command_topic: smartthings/Thermostat/coolingSetpoint
-  temperature_state_topic: smartthings/Thermostat/coolingSetpoint
-  temp_step: 0.5
