--- a/automations.yaml
+++ b/automations.yaml
@@ -1,21 +1,21 @@
-- id: ifttt_vacuum_control
-  alias: IFTTT Vacuum Control
-  initial_state: true
+- alias: IFTTT Vacuum Control
+  id: ifttt_vacuum_control
   trigger:
-    platform: webhook
     webhook_id: !secret 'webhook_vacuum'
+    platform: webhook
+  initial_state: true
   action:
-    service: rest_command.ir_send
     data_template:
       blaster: '{{ trigger.json.blaster }}'
       target: '{{ trigger.json.target }}'
       command: '{{ trigger.json.command }}'
-- id: notify_updates
-  alias: Update Available Notifications
+    service: rest_command.ir_send
+- alias: Update Available Notifications
+  id: notify_updates
   trigger:
-    platform: state
     entity_id: updater.updater
+    platform: state
   action:
-    service: notify.slack
     data:
       message: Update for Home Assistant is available.
+    service: notify.slack
