--- a/lock.yaml
+++ b/lock.yaml
@@ -1,8 +1,8 @@
-- platform: mqtt
-  name: Front Door Lock
-  unique_id: front_door_lock
-  command_topic: smartthings/Front Door Lock/lock
+- retain: true
+  platform: mqtt
   state_topic: smartthings/Front Door Lock/lock
+  command_topic: smartthings/Front Door Lock/lock
   payload_lock: locked
+  unique_id: front_door_lock
+  name: Front Door Lock
   payload_unlock: unlocked
-  retain: true
