--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,17 +1,4 @@
-- platform: darksky
-  api_key: !secret 'api_darksky'
-  forecast:
-  - 0
-  - 1
-  - 2
-  - 3
-  - 4
-  - 5
-  - 6
-  - 7
-  scan_interval:
-    minutes: 15
-  monitored_conditions:
+- monitored_conditions:
   - icon
   - precip_type
   - precip_intensity
@@ -30,48 +17,61 @@
   - apparent_temperature_high
   - apparent_temperature_low
   - precip_intensity_max
-- platform: plex
-  name: Plex Media Server
-  server: home
-  host: !secret 'host_living_room_shield'
+  forecast:
+  - 0
+  - 1
+  - 2
+  - 3
+  - 4
+  - 5
+  - 6
+  - 7
+  api_key: !secret 'api_darksky'
+  platform: darksky
+  scan_interval:
+    minutes: 15
+- server: home
+  platform: plex
   token: !secret 'token_plex'
-  username: !secret 'user_plex'
+  host: !secret 'host_living_room_shield'
   password: !secret 'pass_plex'
-- platform: kodi_recently_added
-  host: !secret 'host_nas'
-- platform: radarr_upcoming_media
-  host: !secret 'host_nas'
+  username: !secret 'user_plex'
+  name: Plex Media Server
+- host: !secret 'host_nas'
+  platform: kodi_recently_added
+- host: !secret 'host_nas'
   api_key: !secret 'api_radarr'
-- platform: sonarr_upcoming_media
-  host: !secret 'host_nas'
+  platform: radarr_upcoming_media
+- host: !secret 'host_nas'
   api_key: !secret 'api_sonarr'
-- platform: waze_travel_time
-  name: Raman Work Commute
+  platform: sonarr_upcoming_media
+- realtime: true
   origin: !secret 'address_home'
+  name: Raman Work Commute
+  platform: waze_travel_time
   destination: !secret 'address_work_raman'
   region: US
-  realtime: true
-- platform: waze_travel_time
-  name: Raman Home Commute
+- realtime: true
   origin: !secret 'address_work_raman'
+  name: Raman Home Commute
+  platform: waze_travel_time
   destination: !secret 'address_home'
   region: US
-  realtime: true
-- platform: waze_travel_time
-  name: Sherene Work Commute
+- realtime: true
   origin: !secret 'address_home'
+  name: Sherene Work Commute
+  platform: waze_travel_time
   destination: !secret 'address_work_sherene'
   region: US
-  realtime: true
-- platform: waze_travel_time
-  name: Sherene Home Commute
+- realtime: true
   origin: !secret 'address_work_sherene'
+  name: Sherene Home Commute
+  platform: waze_travel_time
   destination: !secret 'address_home'
   region: US
-  realtime: true
-- platform: pi_hole
+- host: !secret 'host_pihole'
   name: Pi-Hole
-  host: !secret 'host_pihole'
+  platform: pi_hole
   monitored_conditions:
   - ads_blocked_today
   - ads_percentage_today
@@ -82,63 +82,63 @@
   - unique_clients
   - unique_domains
   - clients_ever_seen
-- platform: mqtt
-  name: Front Door Lock Battery
-  unique_id: front_door_lock_battery
+- device_class: battery
+  platform: mqtt
   unit_of_measurement: '%'
-  device_class: battery
   state_topic: smartthings/Front Door Lock/battery
-- platform: mqtt
-  name: Living Room Sensor Battery
-  unique_id: living_room_sensor_battery
+  unique_id: front_door_lock_battery
+  name: Front Door Lock Battery
+- device_class: battery
+  platform: mqtt
   unit_of_measurement: '%'
-  device_class: battery
   state_topic: smartthings/Living Room Sensor/battery
-- platform: mqtt
-  name: Master Bedroom Sensor Battery
-  unique_id: master_bedroom_sensor_battery
+  unique_id: living_room_sensor_battery
+  name: Living Room Sensor Battery
+- device_class: battery
+  platform: mqtt
   unit_of_measurement: '%'
-  device_class: battery
   state_topic: smartthings/Master Bedroom Sensor/battery
-- platform: mqtt
-  name: Thermostat Humidity
-  unique_id: thermostat_humidity
+  unique_id: master_bedroom_sensor_battery
+  name: Master Bedroom Sensor Battery
+- device_class: humidity
+  platform: mqtt
   unit_of_measurement: '%'
-  device_class: humidity
   state_topic: smartthings/Thermostat/humidity
-- platform: mqtt
-  name: Living Room Humidity
-  unique_id: living_room_sensor_humidity
+  unique_id: thermostat_humidity
+  name: Thermostat Humidity
+- device_class: humidity
+  platform: mqtt
   unit_of_measurement: '%'
-  device_class: humidity
   state_topic: smartthings/Living Room Sensor/humidity
-- platform: mqtt
-  name: Master Bedroom Humidity
-  unique_id: master_bedroom_sensor_humidity
+  unique_id: living_room_sensor_humidity
+  name: Living Room Humidity
+- device_class: humidity
+  platform: mqtt
   unit_of_measurement: '%'
-  device_class: humidity
   state_topic: smartthings/Master Bedroom Sensor/humidity
-- platform: mqtt
-  name: Living Room Temperature
-  unique_id: living_room_sensor_temperature
+  unique_id: master_bedroom_sensor_humidity
+  name: Master Bedroom Humidity
+- device_class: temperature
+  platform: mqtt
   unit_of_measurement: "\xB0F"
-  device_class: temperature
   state_topic: smartthings/Living Room Sensor/temperature
-- platform: mqtt
-  name: Master Bedroom Temperature
-  unique_id: master_bedroom_sensor_temperature
+  unique_id: living_room_sensor_temperature
+  name: Living Room Temperature
+- device_class: temperature
+  platform: mqtt
   unit_of_measurement: "\xB0F"
-  device_class: temperature
   state_topic: smartthings/Master Bedroom Sensor/temperature
-- platform: mqtt
-  name: Living Room Illuminance
-  unique_id: living_room_sensor_illuminance
+  unique_id: master_bedroom_sensor_temperature
+  name: Master Bedroom Temperature
+- device_class: illuminance
+  platform: mqtt
   unit_of_measurement: lm
-  device_class: illuminance
   state_topic: smartthings/Living Room Sensor/illuminance
-- platform: mqtt
-  name: Master Bedroom Illuminance
-  unique_id: master_bedroom_sensor_illuminance
+  unique_id: living_room_sensor_illuminance
+  name: Living Room Illuminance
+- device_class: illuminance
+  platform: mqtt
   unit_of_measurement: lm
-  device_class: illuminance
   state_topic: smartthings/Master Bedroom Sensor/illuminance
+  unique_id: master_bedroom_sensor_illuminance
+  name: Master Bedroom Illuminance
